--- a/views/dex.hbs
+++ b/views/dex.hbs
@@ -1,3 +1,80 @@
-<h6>Dex</h6>
-<h3>Welcome {{{name}}}</h3>
-<p>Hello</p>
+<div class="container">
+  <h1>Pokedex</h1>
+  <div class="poke-container" id="poke-container"></div>
+</div>
+
+<script>
+  const poke_container = document.getElementById("poke-container");
+  const pokemon_count = 30;
+  const colors = {
+    fire: "#FDDFDF",
+    grass: "#DEFDE0",
+    electric: "#FCF7DE",
+    water: "#DEF3FD",
+    ground: "#f4e7da",
+    rock: "#d5d5d4",
+    fairy: "#fceaff",
+    poison: "#98d7a5",
+    bug: "#f8d5a3",
+    dragon: "#97b3e6",
+    psychic: "#eaeda1",
+    flying: "#F5F5F5",
+    fighting: "#E6E0D4",
+    normal: "#F5F5F5",
+  };
+
+  const main_types = Object.keys(colors);
+
+  const fetchPokemons = async () => {
+    for (let i = 1; i <= pokemon_count; i++) {
+      await getPokemon(i);
+    }
+  };
+
+  const getPokemon = async (id) => {
+    const url = `https://pokeapi.co/api/v2/pokemon/${id}`;
+    const res = await fetch(url);
+    const data = await res.json();
+
+    createPokemonCard(data);
+  };
+
+  const createPokemonCard = (pokemon) => {
+    // console.log(pokemon.id);
+
+    const pokemonEl = document.createElement("div");
+    pokemonEl.classList.add("pokemon");
+
+    const name = pokemon.name[0].toUpperCase() + pokemon.name.slice(1);
+    const id = pokemon.id.toString().padStart(3, "0");
+    const poke_types = pokemon.types.map((type) => type.type.name);
+    const type = main_types.find((type) => poke_types.indexOf(type) > -1);
+    const color = colors[type];
+    pokemonEl.style.backgroundColor = color;
+
+    const pokemonInnerHTML = `
+      <div class="pokemon" id="pokemon${pokemon.id}" style="background-color: rbg(22, 253, 224)">
+        <div class="img-container">
+          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/${pokemon.id}.svg" alt="">
+        </div>
+        <div class="info">
+          <span class="number">#${id}</span>
+          <h3 class="name">${name}</h3>
+        <small class="type">Type: <span>${type}</span> </small>
+        </div>
+      </div>
+  `;
+
+    pokemonEl.innerHTML = pokemonInnerHTML;
+
+    pokemonEl.addEventListener("click", () => {
+      window.location.href = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/${pokemon.id}.svg`;
+    });
+
+    poke_container.appendChild(pokemonEl);
+  };
+
+  fetchPokemons();
+
+  module.exports = fetchPokemons;
+</script>
