--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,3 +81,20 @@ h1 {
 .a {
   background-color: #fddfdf;
 }
+
+.header {
+  display: flex;
+  flex-direction: row;
+}
+
+.header .btn {
+  background-color: red;
+  color: blue;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  border-radius: 50%;
+}
