--- a/views/dex.hbs
+++ b/views/dex.hbs
@@ -68,13 +68,11 @@
     pokemonEl.innerHTML = pokemonInnerHTML;
 
     pokemonEl.addEventListener("click", () => {
-      window.location.href = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/${pokemon.id}.svg`;
+      window.location.href = `${window.location.origin}/pokemons/pokepage/${name}`;
     });
 
     poke_container.appendChild(pokemonEl);
   };
 
   fetchPokemons();
-
-  module.exports = fetchPokemons;
 </script>
