--- a/views/layouts/pokepage.hbs
+++ b/views/layouts/pokepage.hbs
@@ -13,21 +13,7 @@
 </head>
 
 <body>
-  <div class="header">
-    {{>_add_btn}}
-    {{>_open_btn}}
-    {{>_logout_btn}}
-  </div>
-  <div class="container">
-    {{{body}}}
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-  <script>
-    M.Sidenav.init(document.querySelector('.sidenav'));
-    M.FormSelect.init(document.querySelector('#status'));
-  </script>
+  <h1>Pokemon</h1>
 </body>
 
 </html>
