--- a/views/partials/_add_btn.hbs
+++ b/views/partials/_add_btn.hbs
@@ -1,3 +1,3 @@
-<div class="add-btn">
+<div class="add-btn btn">
   <a href="/pokemons/add"><i class="fas fa-plus" style="color: white;"></i></a>
 </div>
